--- a/Lesson3/pom.xml
+++ b/Lesson3/pom.xml
@@ -10,4 +10,5 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <name>L3_Agregação+Composição</name>
 </project>
